# wasm-worker

./: .gitignore  Cargo.toml  LICENSE  README.md  wrangler.toml
.devcontainer/: Dockerfile  devcontainer.json
lib/examples/: Cargo.toml
lib/examples/src/: error_response.rs  fetch_html.rs  lib.rs  return_html.rs  return_json.rs
lib/worker/: Cargo.toml
lib/worker/src/: console.rs  error.rs  ffi.rs  init.rs  lib.rs
src/: lib.rs
worker/: worker.js
