[package]
name = "examples"
version = "0.1.0"
authors = ["Perry Birch <perry.birch@nike.com>"]
edition = "2018"

[dependencies]
worker = { version = "0.1.0", path = "../../lib/worker" }
# cookie = "0.11.0"
# futures = "0.1.25"
# handlebars = { version = "1.0.5", features = ["no_dir_source"], default-features = false }
# http = "0.1.13"
# js-sys = "0.3.2"
# lazy_static = "1.1.0"
# pulldown-cmark = "0.8.0"
serde = { version = "1.0.79", features = ["derive"] }
# serde = "1.0.79"
# serde_derive = "1.0.79"
serde_json = "1.0.32"
# time = "0.1.40"
# url = "2.2.0"
wasm-bindgen = { version = "0.2.70", features = ["serde-serialize"] }
# wasm-bindgen-futures = "0.4.20"

[dependencies.js-sys]
version = "0.3.47"

[dependencies.web-sys]
version = "0.3.2"
features = [
  'FetchEvent',
  # 'FormData',
  # 'Headers',
  # 'Request',
  # 'ResponseInit',
]

# [dev-dependencies]
# wasm-bindgen-test = "0.3.20"